tdf#145161: Change pdf and image compression dialog string

Since image/pdf compression does not always reduce image
or pdf resolution, change the misleading label from
"reduce" to "change" wherever possible.

Keep identifiers having "reduce" in their name as is
as of now, only change the string values containing
"reduce" to  "change".

Change-Id: I6c4263250faff906d0a16bd1290dc57960161be0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175929
Tested-by: Jenkins
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>